--- a/.classpath
+++ b/.classpath
@@ -2,6 +2,6 @@
 <classpath>
 	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER/org.eclipse.jdt.internal.debug.ui.launcher.StandardVMType/JavaSE-1.8"/>
 	<classpathentry kind="src" path="src"/>
-	<classpathentry kind="lib" path="D:/Downloads/Spigot/spigot-1.13.jar"/>
+	<classpathentry kind="lib" path="D:/Downloads/spigot-1.13.2-R0.1-SNAPSHOT-b1967.jar"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
